# django-semantic-admin

./: .dockerignore  .flake8  .gitignore  404.html  AGENTS.md  CHANGES.md  Dockerfile  LICENSE  Makefile  README.md  biome.json  index.html  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  search.html  sitemap.xml
.github/workflows/: ci.yml
awesome/: index.html
calendar/: index.html
changes/: index.html
contributing/: index.html
customization/: index.html
demo/: .env.sample  Dockerfile  manage.py  mypy.ini  tasks.py  utils.py
demo/demo/: asgi.py  forms.py  middleware.py  urls.py  wsgi.py
demo/demo/settings/: base.py  development.py  production.py  test.py
demo/demo_app/: __init__.py  admin.py  apps.py  factory.py  filters.py  models.py
demo/demo_app/migrations/: 0001_initial.py
demo/templates/admin/: index.html  login.html
docs/: awesome.md  calendar.md  changes.md  contributing.md  customization.md  index.md  install.md  notes.md  screenshots.md
install/: index.html
notes/: index.html
screenshots/: index.html
search/: search_index.json
semantic_admin/: __init__.py  admin.py  apps.py  awesomesearch.py  blocks.py  fields.py  filters.py  forms.py  helpers.py  settings.py  urls.py  utils.py  widgets.py
semantic_admin/auth/: __init__.py  admin.py  forms.py
semantic_admin/contrib/import_export/: __init__.py  admin.py  forms.py  widgets.py
semantic_admin/filters/: __init__.py  filters.py  filterset.py
semantic_admin/static/admin/js/: actions.js  actions.min.js  calendar.js  inlines.js  inlines.min.js
semantic_admin/static/admin/js/admin/: DateTimeShortcuts.js  DateTimeShortcuts.min.js  RelatedObjectLookups.js
semantic_admin/static/admin_ordering/: admin_ordering.js
semantic_admin/static/import_export/: guess_format.js
semantic_admin/static/semantic_admin/: custom.css  semantic-admin.css  semanticWidgets.js  unsemantic.css
semantic_admin/templates/admin/: actions.html  base.html  base_site.html  change_form.html  change_list.html  change_list_results.html  date_hierarchy.html  delete_button.html  delete_confirmation.html  delete_selected_confirmation.html  filter.html  index.html  login.html  main.html  menu.html  object_history.html  oldlogin.html  pagination.html  portal.html  save_buttons.html  search_form.html  submit_line.html
semantic_admin/templates/admin/auth/user/: add_form.html  change_password.html
semantic_admin/templates/admin/edit_inline/: stacked.html  tabular.html
semantic_admin/templates/admin/import_export/: base.html  change_list.html  change_list_export_item.html  change_list_import_item.html  export.html  export_action_select.html  import.html  resource_fields_list.html
semantic_admin/templates/admin/includes/: fieldset.html  fieldset_content.html  object_delete_summary.html
semantic_admin/templates/admin/widgets/: related_widget_wrapper.html
semantic_admin/templates/django/forms/widgets/: chooser.html  date.html  datetime.html  radio.html  radio_option.html  select.html  select_time.html  textarea.html  time.html
semantic_admin/templates/nesting/admin/includes/: inline.html
semantic_admin/templates/nesting/admin/inlines/: stacked.html
semantic_admin/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_base.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
semantic_admin/templates/semantic_admin/: action_checkbox.html  changelist_checkbox.html
semantic_admin/templates/semantic_admin/forms/widgets/: checkbox.html
semantic_admin/templates/semantic_ui/forms/widgets/: admin_checkbox.html  changelist_checkbox.html  checkbox_option.html  checkbox_select.html  clearable_file_input.html  date.html  datetime.html  input_autocomplete_off.html  input_option.html  multiwidget.html  radio.html  radio_option.html  text.html  time.html  url.html
semantic_admin/templatetags/: awesomesearch.py  semantic_admin_list.py  semantic_app_list.py  semantic_filters.py  semantic_sidebar.py  semantic_utils.py
semantic_admin/tests/: test_admin.py  test_auth_admin.py  test_templatetags.py
semantic_admin/tests/app/: admin.py  apps.py  filters.py  models.py
semantic_admin/tests/app/migrations/: 0001_initial.py
semantic_admin/views/: autocomplete.py
semantic_admin/widgets/: __init__.py  admin.py  autocomplete.py  widgets.py
test_semantic_admin/: apps.py
