[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "django-semantic-admin"
version = "0.7.0"
description = "Django Semantic UI Admin theme"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex", email = "globophobe@gmail.com" }]
keywords = ["django", "admin", "theme"]
classifiers = [
    "Framework :: Django",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=5.2",
    "django-semantic-forms>=0.1.14",
]

[project.urls]
Homepage = "https://github.com/globophobe/django-semantic-admin"
Repository = "https://github.com/globophobe/django-semantic-admin"

[tool.hatch.build.targets.wheel]
packages = ["semantic_admin"]

[dependency-groups]
deploy = [
    "django-filter==25.2",
    "django-taggit==6.1.0",
    "gunicorn==25.3.0",
    "pillow==12.2.0",
    "python-dotenv==1.2.2",
    "sentry-sdk==2.57.0",
    "whitenoise==6.12.0",
]
dev = [
    "djlint==1.36.4",
    "django-debug-toolbar==6.3.0",
    "django-filter==25.2",
    "django-upgrade==1.30.0",
    "django-taggit==6.1.0",
    "factory-boy==3.3.3",
    "faker==40.12.0",
    "gunicorn==25.3.0",
    "invoke==2.2.1",
    "mkdocs==1.6.1",
    "pillow==12.2.0",
    "python-dotenv==1.2.2",
    "ruff==0.15.9",
    "sentry-sdk==2.57.0",
    "whitenoise==6.12.0",
]

[tool.uv]
exclude-newer = "P7D"
exclude-newer-package = { django-semantic-forms = false }

[tool.ruff]
exclude = ["migrations"]
line-length = 88
target-version = "py310"

[tool.djlint]
profile = "django"
max_line_length = 88
extend_exclude = "semantic_admin/templates/admin/includes/fieldset_content.html"
